@@ -45,6 +45,7 @@ DefineUnitType("unit-morel-1", {
     Name = "morel-1",
     Image = {"file", "units/morels/morel_1.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_1s.png", "size", {64, 128}},
+    Offset = {0, -20},
     Animations = "animations-morels",
     Icon = "icon-morel-1",
     Construction = "construction-morels",
@@ -82,6 +83,7 @@ DefineUnitType("unit-morel-2", {
     Name = "morel-2",
     Image = {"file", "units/morels/morel_2.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_2s.png", "size", {64, 128}},
+    Offset = {0, -22},
     Animations = "animations-morels",
     Icon = "icon-morel-2",
     Construction = "construction-morels",
@@ -119,6 +121,7 @@ DefineUnitType("unit-morel-3", {
     Name = "morel-3",
     Image = {"file", "units/morels/morel_3.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_3s.png", "size", {64, 128}},
+    Offset = {0, -22},
     Animations = "animations-morels",
     Icon = "icon-morel-3",
     Construction = "construction-morels",
@@ -156,6 +159,7 @@ DefineUnitType("unit-morel-4", {
     Name = "morel-4",
     Image = {"file", "units/morels/morel_4.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_4s.png", "size", {64, 128}},
+    Offset = {0, -19},
     Animations = "animations-morels",
     Icon = "icon-morel-4",
     Construction = "construction-morels",
@@ -193,6 +197,7 @@ DefineUnitType("unit-morel-5", {
     Name = "morel-5",
     Image = {"file", "units/morels/morel_5.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_5s.png", "size", {64, 128}},
+    Offset = {0, -16},
     Animations = "animations-morels",
     Icon = "icon-morel-5",
     Construction = "construction-morels",
@@ -230,6 +235,7 @@ DefineUnitType("unit-morel-6", {
     Name = "morel-6",
     Image = {"file", "units/morels/morel_6.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_6s.png", "size", {64, 128}},
+    Offset = {0, -23},
     Animations = "animations-morels",
     Icon = "icon-morel-6",
     Construction = "construction-morels",
@@ -267,6 +273,7 @@ DefineUnitType("unit-morel-7", {
     Name = "morel-7",
     Image = {"file", "units/morels/morel_7.png", "size", {64, 128}},
     Shadow = {"file", "units/morels/morel_7s.png", "size", {64, 128}},
+    Offset = {0, -24},
     Animations = "animations-morels",
     Icon = "icon-morel-7",
     Construction = "construction-morels",
